add all till lab3

--- a/lab3/src/makefile
+++ b/lab3/src/makefile
@@ -13,7 +13,10 @@ utils.o : utils.h
 find_min_max.o : utils.h find_min_max.h
 	$(CC) -o find_min_max.o -c find_min_max.c $(CFLAGS)
 
-clean :
-	rm utils.o find_min_max.o sequential_min_max parallel_min_max
+sequential_min_max_single_process: sequential_min_max
+	$(CC) -o sequential_min_max_single_process sequential_min_max_single_process.c $(CFLAGS)
 
-all: sequential_min_max parallel_min_max utils.o find_min_max.o
+clean :
+	rm utils.o find_min_max.o sequential_min_max parallel_min_max sequential_min_max_single_process
+
+all: sequential_min_max parallel_min_max sequential_min_max_single_process utils.o find_min_max.o
